[gd_scene load_steps=27 format=3 uid="uid://d4oll83xmwll"]

[ext_resource type="Script" uid="uid://bk7y2ii8m7ijf" path="res://source/audio/audio_manager.gd" id="1_iqk28"]
[ext_resource type="AudioStream" uid="uid://6kvur47w0cxn" path="res://assets/audio/death sounds/explosionCrunch_000.ogg" id="1_pmfl0"]
[ext_resource type="AudioStream" uid="uid://c5f00sos6661l" path="res://assets/audio/death sounds/explosionCrunch_001.ogg" id="2_7dd8v"]
[ext_resource type="AudioStream" uid="uid://b0rshf1st1q1h" path="res://assets/audio/death sounds/explosionCrunch_002.ogg" id="3_6vp1n"]
[ext_resource type="AudioStream" uid="uid://dcx4yiwaamuwg" path="res://assets/audio/death sounds/explosionCrunch_003.ogg" id="4_edt52"]
[ext_resource type="AudioStream" uid="uid://drn5jihlfjxw3" path="res://assets/audio/death sounds/explosionCrunch_004.ogg" id="5_8ypky"]
[ext_resource type="AudioStream" uid="uid://beqw74yby6jdf" path="res://assets/audio/drill/spaceEngineSmall_000.ogg" id="6_3w53m"]
[ext_resource type="AudioStream" uid="uid://b3n6bsoq63v3o" path="res://assets/audio/drill/spaceEngineSmall_001.ogg" id="7_ajayd"]
[ext_resource type="AudioStream" uid="uid://cxiv0txy5gwgs" path="res://assets/audio/drill/spaceEngineSmall_002.ogg" id="8_14y0u"]
[ext_resource type="AudioStream" uid="uid://dkgrq3smyjkrf" path="res://assets/audio/drill/spaceEngineSmall_003.ogg" id="9_c8qql"]
[ext_resource type="AudioStream" uid="uid://bagbmlnklqrmf" path="res://assets/audio/drill/spaceEngineSmall_004.ogg" id="10_g2g0t"]
[ext_resource type="AudioStream" uid="uid://coeo7hi67stsr" path="res://assets/audio/engine/thrusterFire_000.ogg" id="11_lsrtn"]
[ext_resource type="AudioStream" uid="uid://cqxth5jpd8kdx" path="res://assets/audio/engine/thrusterFire_001.ogg" id="12_ujh5k"]
[ext_resource type="AudioStream" uid="uid://dwijmxfurk04q" path="res://assets/audio/engine/thrusterFire_002.ogg" id="13_oj4l7"]
[ext_resource type="AudioStream" uid="uid://cw8v6ytgpbi0g" path="res://assets/audio/engine/thrusterFire_003.ogg" id="14_eu2m7"]
[ext_resource type="AudioStream" uid="uid://da0lndtkyxtvp" path="res://assets/audio/engine/thrusterFire_004.ogg" id="15_4q4yh"]
[ext_resource type="AudioStream" uid="uid://62hj1p0fq5wt" path="res://assets/audio/shooting/laserSmall_000.ogg" id="16_dr5h3"]
[ext_resource type="AudioStream" uid="uid://cpmh11wjbn1wo" path="res://assets/audio/shooting/laserSmall_001.ogg" id="17_iqk28"]
[ext_resource type="AudioStream" uid="uid://b0je7wxcj4sc" path="res://assets/audio/shooting/laserSmall_002.ogg" id="18_5d1gf"]
[ext_resource type="AudioStream" uid="uid://csm7w074j6jiy" path="res://assets/audio/shooting/laserSmall_003.ogg" id="19_jaw1v"]
[ext_resource type="AudioStream" uid="uid://b7csfbxcpaotv" path="res://assets/audio/shooting/laserSmall_004.ogg" id="20_4axg7"]
[ext_resource type="AudioStream" uid="uid://v7x343baq2h3" path="res://assets/audio/music/Not Enough Power.mp3" id="22_5d1gf"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3w53m"]
playback_mode = 1
streams_count = 5
stream_0/stream = ExtResource("1_pmfl0")
stream_1/stream = ExtResource("2_7dd8v")
stream_2/stream = ExtResource("3_6vp1n")
stream_3/stream = ExtResource("4_edt52")
stream_4/stream = ExtResource("5_8ypky")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lsrtn"]
streams_count = 5
stream_0/stream = ExtResource("6_3w53m")
stream_1/stream = ExtResource("7_ajayd")
stream_2/stream = ExtResource("8_14y0u")
stream_3/stream = ExtResource("9_c8qql")
stream_4/stream = ExtResource("10_g2g0t")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dr5h3"]
streams_count = 5
stream_0/stream = ExtResource("11_lsrtn")
stream_1/stream = ExtResource("12_ujh5k")
stream_2/stream = ExtResource("13_oj4l7")
stream_3/stream = ExtResource("14_eu2m7")
stream_4/stream = ExtResource("15_4q4yh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rd3ht"]
streams_count = 5
stream_0/stream = ExtResource("16_dr5h3")
stream_1/stream = ExtResource("17_iqk28")
stream_2/stream = ExtResource("18_5d1gf")
stream_3/stream = ExtResource("19_jaw1v")
stream_4/stream = ExtResource("20_4axg7")

[node name="AudioManager" type="Node"]
script = ExtResource("1_iqk28")

[node name="SFX" type="Node" parent="."]

[node name="AlienDeath" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_3w53m")
volume_db = -21.06
bus = &"SFX"

[node name="Drill" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_lsrtn")
volume_db = -20.0
bus = &"SFX"

[node name="PlayerVehicle" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_dr5h3")
volume_db = -20.0
bus = &"SFX"

[node name="PlayerShoot" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_rd3ht")
volume_db = -20.0
pitch_scale = 0.5
bus = &"SFX"

[node name="Music" type="Node" parent="."]

[node name="LevelMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("22_5d1gf")
volume_db = -20.0
bus = &"Music"
